src/objects/social_share__c.object
<CustomObject>
    <fields>
        <fullName>Action_from_Share__c</fullName>
        <description>Number of actions generated by this share</description>
        <inlineHelpText>Number of actions generated by this share</inlineHelpText>
        <label>Actions from Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_sharer__c</fullName>
        <description>Constituent who performed this share action</description>
        <inlineHelpText>Constituent who performed this share action</inlineHelpText>
        <label>Sharing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Social Shares</relationshipLabel>
        <relationshipName>Social_Shares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market_Source_Type__c</fullName>
        <formula>CASE( LEFT( UPPER(  Market_Source__c ), 3),
&quot;EML&quot;,&quot;Email&quot;,
&quot;WEB&quot;,&quot;Organic Website&quot;,
&quot;BAN&quot;,&quot;Banner Ads&quot;,
&quot;GAD&quot;,&quot;Google Ads&quot;,
&quot;OTH&quot;,&quot;Other&quot;,
&quot;n/a&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <label>Market Source</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contacts_from_Share__c</fullName>
        <description>Number of new contacts created via this share</description>
        <inlineHelpText>Number of new contacts created via this share</inlineHelpText>
        <label>New Contacts from Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The donation which originated this social share</description>
        <inlineHelpText>The donation which originated this social share</inlineHelpText>
        <label>Originating Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Social Shares</relationshipLabel>
        <relationshipName>Social_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Actions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The action which originated this social share</description>
        <inlineHelpText>The action which originated this social share</inlineHelpText>
        <label>Originating Action</label>
        <referenceTo>sb_Actions_Taken__c</referenceTo>
        <relationshipLabel>Social Shares</relationshipLabel>
        <relationshipName>Social_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_from_Share__c</fullName>
        <description>Total revenue generated from this share</description>
        <inlineHelpText>Total revenue generated from this share</inlineHelpText>
        <label>Revenue from Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Share_Date__c</fullName>
        <description>Date that this share occurred</description>
        <inlineHelpText>Date that this share occurred</inlineHelpText>
        <label>Share Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Share_URL__c</fullName>
        <description>URL of the shared item</description>
        <inlineHelpText>URL of the shared item</inlineHelpText>
        <label>Share URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Page_Drupal_ID__c</fullName>
        <description>Drupal node ID of the form/page from which this share occured</description>
        <inlineHelpText>Drupal node ID of the form/page from which this share occured</inlineHelpText>
        <label>Shared Page Drupal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Page_Name_Internal__c</fullName>
        <description>Internal/Drupal name of the shared form or page</description>
        <inlineHelpText>Internal/Drupal name of the shared form or page</inlineHelpText>
        <label>Shared Page Name (Internal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Page_Name__c</fullName>
        <description>Form or other page shared</description>
        <inlineHelpText>Form or other page shared</inlineHelpText>
        <label>Shared Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Network__c</fullName>
        <label>Social Network</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinterest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Share_ID__c</fullName>
        <description>ID of the Drupal social share action</description>
        <inlineHelpText>ID of the Drupal social share action</inlineHelpText>
        <label>Social Share ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Share_Type__c</fullName>
        <description>Type of share (e-mail, FB, etc.)</description>
        <inlineHelpText>Type of share (e-mail, FB, etc.)</inlineHelpText>
        <label>Social Share Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_ID__c</fullName>
        <description>Submission ID from which this share originated</description>
        <inlineHelpText>Submission ID from which this share originated</inlineHelpText>
        <label>Submission ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Social Share</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_sharer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Social Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>